<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/main_cour_draw"
            android:checked="false"
            android:title="@string/mani_courante_drawer" />

        <item
            android:id="@+id/point_draw"
            android:checked="false"
            android:title="@string/pointage_drawer" />

        <item
            android:id="@+id/suiv_draw_draw"
            android:checked="false"
            android:title="@string/suivi_ronde_drawer" />

        <item
            android:id="@+id/sos_draw"
            android:checked="false"
            android:title="@string/sos_drawer"
            />


        <item
            android:id="@+id/quit_draw"
            android:checked="false"
            android:title="@string/quitter_drawer" />


    </group>
</menu>